--- a/PhysicaloidLibrary/build.gradle
+++ b/PhysicaloidLibrary/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
@@ -6,7 +6,7 @@ dependencies {
 
 android {
     compileSdkVersion 18
-    buildToolsVersion '18.1.0'
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         minSdkVersion 12
