--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
 	repositories {
 		mavenCentral()
+		jcenter()
 	}
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:0.5.+'
+		classpath 'com.android.tools.build:gradle:2.2.2'
 	}
 }
 
@@ -16,7 +17,7 @@ allprojects {
 		mavenCentral()
 	}
 
-	tasks.withType(Compile) {
-		options.encoding = "UTF-8"
-	}
+//	tasks.withType(Compile) {
+//		options.encoding = "UTF-8"
+//	}
 }
