--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
 	repositories {
 		mavenCentral()
-		jcenter()
+		google()
+        jcenter()
 	}
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.2.2'
+		classpath 'com.android.tools.build:gradle:3.0.1'
 	}
 }
 
@@ -17,7 +18,7 @@ allprojects {
 		mavenCentral()
 	}
 
-//	tasks.withType(Compile) {
-//		options.encoding = "UTF-8"
-//	}
+	tasks.withType(JavaCompile) {
+		options.encoding = "UTF-8"
+	}
 }
